@@ -1,4 +1,4 @@
-#	$NetBSD: DEVNAMES,v 1.311 2018/06/05 08:03:29 hkenken Exp $
+#	$NetBSD: DEVNAMES,v 1.312 2018/07/27 12:02:26 rkujawa Exp $
 #
 # This file contains all used device names and defined attributes in
 # alphabetical order. New devices added to the system somewhere should first
@@ -1325,6 +1325,7 @@ tcx			sparc64
 tdvfb			MI
 te			vax
 tea5757			MI
+tea5767radio		MI
 tfb			MI
 tga			MI
 ti			MI
