@@ -1,4 +1,4 @@
-#	$NetBSD: files.i2c,v 1.93 2018/06/26 06:34:55 thorpej Exp $
+#	$NetBSD: files.i2c,v 1.94 2018/07/27 12:02:26 rkujawa Exp $
 
 obsolete defflag	opt_i2cbus.h		I2C_SCAN
 define	i2cbus { }
@@ -339,3 +339,9 @@ file	dev/i2c/imt.c				imt
 device	tsllux: sysmon_envsys
 attach	tsllux at iic
 file	dev/i2c/tsl256x.c			tsllux
+
+# Philips/NXP TEA5767 
+device tea5767radio : radiodev
+attach tea5767radio at iic
+file dev/i2c/tea5767.c				tea5767radio
+
